--- a/pages/galery.html
+++ b/pages/galery.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+   
+    <link rel="stylesheet" href="../css/main.css">
     <title>Main</title>
 </head>
 
@@ -14,8 +15,8 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
                 <div class="nav-item">
-                    <a class="nav-link title" href="../index.html">
-                        <span class="title-icon"></span><div class="d-none d-md-inline">
+                    <a class="nav-link title" href="index.html">
+                        <span class="title-icon col-0"></span><div class="d-none d-md-inline">
                             magic cake
                         </div>
                     </a>
