se colocan buenas practicas de ceo en la pagina y se cambia todo el lorem por texto real

--- a/pages/galery.html
+++ b/pages/galery.html
@@ -25,23 +25,23 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="galery.html">Galery</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="about.html" >Historia</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="recipes.html">Recetas</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacto</a>
-                      </li>
-                  </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/galery.html" alt="ir a galeria">Galery</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/galery.html"  alt="nuestra historia">Historia</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/recipes.html" alt="receta diarias">Recetas</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/contact.html" alt="contacte con nosotros">Contacto</a>
+                          </li>
+                      </ul>
                  
                 </div>
               </div>
@@ -64,7 +64,7 @@
                 <img src="../assets/img/tortas/2.jpg" alt="">
                 <div class="card_body">
                     <h2>muffins Chocolate</h2>
-                    <p><b>$ 250</b></p>
+                    <p>$ 250</p>
                 </div>
             </article>
            </div>
