--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Main</title>
+    <title>Recetas</title>
 </head>
 
 <body>
@@ -29,21 +29,21 @@
                 <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                          <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="galery.html">Galery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">Historia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="recipes.html">Recetas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contacto</a>
-                        </li>
-                    </ul>
+                            <a class="nav-link" href="pages/galery.html" alt="ir a galeria">Galery</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/galery.html"  alt="nuestra historia">Historia</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/recipes.html" alt="receta diarias">Recetas</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="pages/contact.html" alt="contacte con nosotros">Contacto</a>
+                          </li>
+                      </ul>
 
                 </div>
             </div>
