--- a/pages/about.html
+++ b/pages/about.html
@@ -10,42 +10,45 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="container-fluid">
-                <div class="nav-item">
-                    <a class="nav-link title" href="../index.html">
-                        <span class="title-icon"></span><div class="d-none d-md-inline">
-                            magic cake
-                        </div>
-                    </a>
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <div class="nav-item">
+                <a class="nav-link title" href="../index.html">
+                    <span class="title-icon col-0"></span>
+                    <div class="d-none d-md-inline">
+                        magic cake
+                    </div>
+                </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/galery.html" alt="ir a galeria">Galery</a>
+                        <a class="nav-link" href="galery.html" alt="ir a galeria">Galery</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="pages/galery.html"  alt="nuestra historia">Historia</a>
+                        <a class="nav-link" href="about.html"  alt="nuestra historia">Historia</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="pages/recipes.html" alt="receta diarias">Recetas</a>
+                        <a class="nav-link" href="recipes.html" alt="receta diarias">Recetas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="pages/contact.html" alt="contacte con nosotros">Contacto</a>
+                        <a class="nav-link" href="contact.html" alt="contacte con nosotros">Contacto</a>
                       </li>
                   </ul>
-                 
-                </div>
-              </div>
-        </nav>
-    </header>
+
+            </div>
+        </div>
+    </nav>
+</header>
     <main class="container">
         <div class="row">
             <h1 class="text-center">Acerca de Nosotros</h1>
