--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Home</a>
+                          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/galery.html" alt="ir a galeria">Galery</a>
+                            <a class="nav-link" href="galery.html" alt="ir a galeria">Galery</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="pages/galery.html"  alt="nuestra historia">Historia</a>
+                            <a class="nav-link" href="about.html"  alt="nuestra historia">Historia</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="pages/recipes.html" alt="receta diarias">Recetas</a>
+                            <a class="nav-link" href="recipes.html" alt="receta diarias">Recetas</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="pages/contact.html" alt="contacte con nosotros">Contacto</a>
+                            <a class="nav-link" href="contact.html" alt="contacte con nosotros">Contacto</a>
                           </li>
                       </ul>
 
