--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
     <title>Contacto</title>
 </head>
 
-<body>
+<body class="">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
